Added HTML comment at the top with project info

--- a/blank-template.html
+++ b/blank-template.html
@@ -1,3 +1,11 @@
+<!--
+	Name: Blade Lucas
+	File: blank-template.html
+	Date: 03 October 2024
+	Description: This excersise is to start using html tables for data. We are using the tutorial from
+    mozilla called Structuring Planet Data
+	-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
